--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["apartflow", "ARGB", "barrell", "lato", "Supportcategory"]
+  "cSpell.words": [
+    "apartflow",
+    "ARGB",
+    "barrell",
+    "lato",
+    "RGBO",
+    "Supportcategory"
+  ]
 }
