--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -38,6 +38,9 @@ dependencies:
   uuid: ^4.2.2
   intl: ^0.19.0
   get: ^4.6.5
+  web_socket_channel: ^2.4.0
+  http: ^1.1.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
