--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   http: ^1.1.0
   firebase_core: ^2.24.2
+  socket_io_client: ^2.0.0
 
 dev_dependencies:
   flutter_test:
