--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.1.0
   firebase_core: ^2.24.2
   socket_io_client: ^2.0.0
+  payhere_mobilesdk_flutter: ^3.0.9
 
 dev_dependencies:
   flutter_test:
